// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldPanel /> component its snapshot matches story Default 1`] = `
.c0 {
  background-color: #f4f4f4;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

.c3 {
  margin-bottom: 1.5rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        Some title
      </div>
      <div
        class="c3"
      >
        <div
          style="background-color: rgb(255, 255, 255); height: 3em;"
        />
      </div>
      <div
        class="c3"
      >
        <div
          style="background-color: rgb(255, 255, 255); height: 3em;"
        />
      </div>
      <div
        class="c3"
      >
        <div
          style="background-color: rgb(255, 255, 255); height: 3em;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FieldPanel /> component its snapshot matches story WithHelpText 1`] = `
.c0 {
  background-color: #f4f4f4;
}

.c3 {
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  margin-bottom: 1.5rem;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

.c4 {
  margin-bottom: 1.5rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        Some title
      </div>
      <p
        class="c3"
      >
        Lorem ipsum dolor sit amet consectetuer adispcing
      </p>
      <div
        class="c4"
      >
        <div
          style="background-color: rgb(255, 255, 255); height: 3em;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          style="background-color: rgb(255, 255, 255); height: 3em;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          style="background-color: rgb(255, 255, 255); height: 3em;"
        />
      </div>
    </div>
  </div>
</div>
`;
